Updates to eval module script and notebook (fixed argument type for eval function)

--- a/notebooks/test_eval_pybayts.ipynb
+++ b/notebooks/test_eval_pybayts.ipynb
@@ -1788,7 +1788,7 @@
     "def evaluate(groundtruth, decimal_yr_arr, aoi_name):\n",
     "    \"\"\"Evaluate co-registered reference and bayts inference data using confusion matrix and F1 score.\n",
     "    Args:\n",
-    "        groundtruth (str): rioxarray of clipped reference image (may need to run reproject match against a sample time series mosaic for the AOI)\n",
+    "        groundtruth (xarray): rioxarray of clipped reference image (may need to run reproject match against a sample time series mosaic for the AOI)\n",
     "        \n",
     "        decimal_yr_arr (array): array of boolean values where [True = change, False = no change]\n",
     "        \n",
@@ -1828,6 +1828,7 @@
     "            decimal_yr_arr_flat = decimal_yr_arr.astype(np.uint16).flatten()\n",
     "            \n",
     "            cm = generate_cm(groundtruth_flat, decimal_yr_arr_flat, year)\n",
+    "            assert(cm.shape == (2, 2))\n",
     "            f1 = generate_f1(groundtruth_flat, decimal_yr_arr_flat, year)\n",
     "            \n",
     "            classes = [False,  True]\n",
@@ -1892,6 +1893,7 @@
     "            print(\"unique values in groundtruth_flat, decimal_yr_arr_flat: \", np.unique(groundtruth_flat), np.unique(decimal_yr_arr_flat))\n",
     "            \n",
     "            cm = generate_cm(groundtruth_flat, decimal_yr_arr_flat, year)\n",
+    "            assert(cm.shape == (2, 2))\n",
     "            f1 = generate_f1(groundtruth_flat, decimal_yr_arr_flat, year)\n",
     "            \n",
     "            classes = [False,  True]\n",
