--- a/notebooks/hls.ipynb
+++ b/notebooks/hls.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -29,7 +31,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "auth = earthaccess.login(persist=True)  # persist EDL login to netrc file"
@@ -48,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "from pyproj import Transformer\n",
@@ -82,11 +88,11 @@
     "\n",
     "utm_zone, hemisphere, epsg_code = latlon_to_utm_zone(latitude, longitude)\n",
     "x, y = latlon_to_utm(latitude, longitude, epsg_code)\n",
-    "buffer_size = 1000  # Change this value to adjust the size of the bounding box\n",
+    "buffer_size = 5000  # Change this value to adjust the size of the bounding box\n",
     "bbox_utm = create_bbox(x, y, buffer_size)\n",
     "\n",
     "def bbox_to_latlon(epsg_code, x1, y1, x2, y2):\n",
-    "    transformer = Transformer.from_crs(f\"EPSG:{epsg_code}\", \"EPSG:4326\")\n",
+    "    transformer = Transformer.from_crs(f\"EPSG:{epsg_code}\", \"EPSG:4326\", always_xy=True)\n",
     "    lat1, lon1 = transformer.transform(x1, y1)\n",
     "    lat2, lon2 = transformer.transform(x2, y2)\n",
     "    return lat1, lon1, lat2, lon2\n",
@@ -99,6 +105,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "bbox_utm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "bbox_latlon"
@@ -117,17 +134,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "time_range = [\"2022-07-01T00:00:00Z\", \"2022-08-01T23:59:59Z\"]\n",
-    "collection_ids = [\"HLSS30.v2.0\"]  # Harmonized Landsat-8 Sentinel-2 (HLS)"
+    "time_range = [\"2022-01-01T00:00:00Z\", \"2023-05-10T23:59:59Z\"]\n",
+    "collection_ids = [\"HLSL30.v2.0\"]  # Harmonized Landsat-8 Sentinel-2 (HLS)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "query = dict(bbox=list(bbox_latlon), datetime=time_range, collections=collection_ids)"
@@ -136,7 +157,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dp = torchdata.datapipes.iter.IterableWrapper(iterable=[query])\n",
@@ -148,7 +171,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "def get_all_items(item_search) -> pystac.ItemCollection:\n",
@@ -158,7 +183,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "dp_hls_items = dp_pystac_client.flatmap(fn=get_all_items)\n",
@@ -168,7 +195,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "it = iter(dp_hls_items)\n",
@@ -216,6 +245,7 @@
     "    assets=[\"B04\", \"B03\", \"B02\"],  # RGB bands\n",
     "    epsg=32611,  # UTM Zone 11N\n",
     "    resolution=30,  # Spatial resolution of 30 metres\n",
+    "    bounds_latlon=bbox_latlon,\n",
     "    xy_coords=\"center\",  # pixel centroid coords instead of topleft corner\n",
     "    dtype=np.float16,  # Use a lightweight data type\n",
     "    # https://github.com/gjoseph92/stackstac/issues/133\n",
@@ -385,9 +415,8 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.3"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
